apps/nas-t/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nas-t
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: files-nas-t
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 30051
